--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     "require-dev": {
         "doctrine/dbal": "^3.6",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/attributes": "^2.2",
+        "laravel-lang/lang": "^12.17",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
