--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "filament/filament": "^2.0",
         "flowframe/laravel-trend": "^0.1.5",
+        "geekcom/validator-docs": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^3.2",
